feat(node): Display time with EJS for cache behavior
This commit focuses on improving the user experience and cache demonstration. The updates encompass:

- Modified the "/test" endpoint in the Node.js application to return the current time in HH:mm:ss format.
- Integrated the EJS templating engine in the Node.js application to render the time on the web page, illustrating cache stale-while-revalidate behavior.

--- a/node-app/public/css/cache.css
+++ b/node-app/public/css/cache.css
@@ -28,6 +28,16 @@
     color: white;
     font-weight: 700;
     font-family: Circular, serif;
+    margin-bottom: 0;
+}
+
+.time {
+    font-size: 3.5rem;
+    line-height: 1;
+    color: #e8e8e8;
+    font-weight: 700;
+    font-family: Circular, serif;
+    margin-top: 50px;
 }
 
 @font-face {
