--- a/node-app/views/index.html
+++ b/node-app/views/index.html
@@ -10,6 +10,7 @@
         <div class="background-noisy">
             <div class="center">
                 <h1 class="app-name">Node App</h1>
+                <h2 class="time"><%= time %></h2>
             </div>
         </div>
     </div>
